--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,22 @@
 -i https://pypi.org/simple
 async-generator==1.10
-attrs==18.2.0
+attrs==19.1.0
 beautifulsoup4==4.7.1
 bs4==0.0.1
 h11==0.8.1
 idna==2.8
-neo4j==1.7.1
+jinja2==2.10.1
+markupsafe==1.1.1
+neo4j==1.7.2
 neobolt==1.7.4
 neotime==1.7.4
 outcome==1.0.0
 python-dotenv==0.10.1
-pytz==2018.9
+pytz==2019.1
 pyyaml==4.2b4
-redis==3.1.0
+redis==3.2.1
 six==1.12.0
 sniffio==1.0.0
 sortedcontainers==2.1.0
-soupsieve==1.7.3
+soupsieve==1.9.1
 trio==0.11.0
